--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Web приложение созданное как учебный пример к курсу разарботка на ASP.net MVC
+Web приложение созданное как учебный пример к курсу разарботка на ASP.net MVC.
+Автор Осипов Е. prilatof@gmail.com
