--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-Web приложение созданное как учебный пример к курсу разарботка на ASP.net MVC.
-Автор Осипов Е. prilatof@gmail.com
+Web приложение созданное, как учебный пример к курсу разарботка на ASP.net MVC.
+Автор Осипов Е. prilatof@gmail.com.
+Так же на нем учусь использованию git
